# axum-task-api

./: Cargo.toml  docker-compose.yml
migrations/: 20260625164829_create_users.sql  20260625164937_create_tasks.sql
src/: main.rs
src/config/: mod.rs
src/database/: mod.rs
src/handlers/: auth_handler.rs
src/models/: auth.rs  user.rs
src/repositories/: mod.rs  postgres_user_repository.rs  user_repository.rs
src/services/: auth_service.rs
